<resources>
    <string name="app_name">Fintamath</string>
    <string name="version_message">Version 0.1.4 alpha</string>

    <string name="alternative_form">Alternative Form</string>
    <string name="math_edit_text_hint">Type a math problem…</string>
    <string name="back">Back</string>
    <string name="options">Options Menu</string>
    <string name="camera">Camera</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="about">About us</string>
    <string name="invalid_input">Invalid input</string>
    <string name="character_limit_exceeded">Character limit exceeded</string>
    <string name="warning">Warning</string>
    <string name="invalid_input_message">Sorry, we don\'t quite understand your math problem…</string>
    <string name="character_limit_exceeded_message">Sorry, solution character limit exceeded…</string>
    <string name="incomplete_input_message">Please, enter a complete math problem.</string>
    <string name="empty_history_message">No calculation history found.\nStart any calculation and the history will appear.</string>
    <string name="empty_settings_message">No settings yet…</string>
    <string name="coming_soon_message">Coming soon…</string>
    <string name="contact_us">Contact us:</string>
    <string name="bookmark">Bookmark</string>
    <string name="trash">Trash</string>
    <string name="calculate">Calculate</string>
    <string name="logo">Logo</string>
    <string name="help">Help</string>
    <string name="gallery">Gallery</string>
    <string name="shot">Shot</string>
    <string name="light">Flashlight</string>
    <string name="no_permission">Permissions not granted by the user.</string>
    <string name="camera_failed">Unable to take a picture.</string>

    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>

    <string name="page_link">https://github.com/fintarin/FintamathAndroid</string>
    <string name="contact_link">support@fintamath.com</string>

    <string name="history_filename">history.json</string>
    <string name="math_text_filename">math_text.json</string>
</resources>