<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_quick_action_popup">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/cut"
        android:layout_width="@dimen/width_cut"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="@drawable/background_quick_action_button"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:text="@string/cut"
        android:textColor="@color/text_main"
        android:textSize="@dimen/text_size_quick_bar"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/copy"
        android:layout_width="@dimen/width_copy"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="@drawable/background_quick_action_button"
        android:stateListAnimator="@null"
        android:text="@string/copy"
        android:textAllCaps="false"
        android:textColor="@color/text_main"
        android:textSize="@dimen/text_size_quick_bar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/paste"
        android:layout_width="@dimen/width_paste"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="@drawable/background_quick_action_button"
        android:stateListAnimator="@null"
        android:text="@string/paste"
        android:textAllCaps="false"
        android:textColor="@color/text_main"
        android:textSize="@dimen/text_size_quick_bar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/delete"
        android:layout_width="@dimen/width_delete"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:background="@drawable/background_quick_action_button"
        android:stateListAnimator="@null"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/text_main"
        android:textSize="@dimen/text_size_quick_bar" />

</LinearLayout>