<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main"
    tools:context=".fragment.history.HistoryFragment">

    <RelativeLayout
        android:id="@+id/historyBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar_background">

        <ImageButton
            android:id="@+id/historyBackButton"
            android:layout_width="@dimen/diameter_bar_key"
            android:layout_height="@dimen/diameter_bar_key"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:background="@drawable/bar_key_background"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/history"
            android:textColor="@color/text_main"
            android:textSize="@dimen/text_size_bar"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emptyHistoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:text="@string/empty_history_message"
            android:textSize="@dimen/text_size_main"
            android:textColor="@color/text_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/history_item"/>

    </RelativeLayout>

</LinearLayout>